Dynegy/src/objects/Service_Point__c.object
<CustomObject>
    <fields>
        <fullName>LDC_Account_Number__c</fullName>
        <label>LDC Account Number</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipLabel>Service Points</relationshipLabel>
        <relationshipName>Service_Points</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Point_Number__c</fullName>
        <label>Service Point Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Service Point</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Service Point</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>